# vocal-split

./: README.md  README_zh-CN.md  README_zh.md  package.oo.yaml  pyproject.toml
.claude/: settings.local.json
flows/split-by-stem/: .flow.ui.oo.json  flow.oo.yaml
flows/split-by-vocal/: .flow.ui.oo.json  flow.oo.yaml
flows/split-vocal-from-video/: .flow.ui.oo.json  flow.oo.yaml
oo-locales/: en.json  zh-CN.json
subflows/split-stem-from-video/: .subflow.ui.oo.json  subflow.oo.yaml
subflows/split-vocal-from-video/: .subflow.ui.oo.json  subflow.oo.yaml
tasks/split-by-stem/: __init__.py  task.oo.yaml
tasks/split-by-vocal/: __init__.py  task.oo.yaml
